fixes b2b container alignment

--- a/styles/index-styles/main.scss
+++ b/styles/index-styles/main.scss
@@ -208,19 +208,20 @@ a{
     // border:1px solid red;
 
     @include desktop(){
-        width:80%;
+        width: 93%;
+
     }
 
     @include large-desktop(){
-        width:70%;
+        width: 84%;
     }
 
     @include xtra-large-desktop(){
-        width:60%;
+        width: 80%;
     }
 
     @include largest(){
-        width: 50%;
+        width: 77%;
     }
 }
 
@@ -724,7 +725,7 @@ header{
             // }
 
             @include desktop(){
-                flex-direction: row;
+                // flex-direction: row;
                 margin: 125px 0px;
             }
 
@@ -756,16 +757,15 @@ header{
     }
 
     @include desktop(){
-        text-align: left;
         padding: 0px;
         /* width: 54%; */
-        margin-right: 33px;
+
         /* height: 400px; */
     }
 
-    @include large-desktop(){
-        margin-right: 75px;
-    }
+    // @include large-desktop(){
+    //     margin-right: 75px;
+    // }
 
     h1{
         width: 100%;
@@ -798,6 +798,16 @@ header{
             line-height: 22px;
             width: 100%;
         }
+        
+        @include med-desktop(){
+            line-height: 1.6em;
+            width: 72%;
+            margin-bottom: 1em;
+        }
+
+        @include xtra-large-desktop(){
+            width: 59%;
+        }
     }
 }
 
@@ -810,6 +820,7 @@ header{
     justify-content: space-around;
     text-align: center;
     padding: 0px 10px;
+    max-width: 450px;
 
     @include desktop(){
         width: 48%;
@@ -818,7 +829,9 @@ header{
     }
 
     @include xtra-large-desktop(){
-        width: 60%;
+        width: 45%;
+        // margin-top: 2em;
+    
     }
 }
 
@@ -828,77 +841,95 @@ header{
 
     @include desktop(){
         background-image:url("../../images/index-images/B2B_BG.jpg");
-        justify-content: flex-start;
+        // justify-content: flex-start;
     }
 
     .container{
         flex-direction: column;
         text-align: center;
-        padding: 0em 2em;
+        // padding: 0em 2em;
 
         @include desktop(){
             margin: 125px 0px;
-            width: 50%;
+            align-items: flex-start;
+
         }
 
 
         @include med-desktop(){
             flex-direction:row;
             flex-direction: column;
-            padding: 0em 4em;
+            // padding: 0em 4em;
         }
             
         @include xtra-large-desktop(){
             align-items: flex-start;
             text-align: left;
-            padding: 0em 7em;
+            // padding: 0em 7em;
         }
 
         @include largest(){
-            padding: 0em 12em;
-        }
-        
-        h1{
-            color:$dark-gray;
-            
-        }
-        
-        span{
-            color:$dark-green;
-            font-family:$secondary;
-            // text-shadow: none;
-
-            @include large-desktop(){
-                font-size: 1em;
-            }
-            
-        }
-        
-        p{
-            margin-top:15px;
+            // padding: 0em 12em;
         }
 
-        a{
-            margin: 1em 0em 3em 0em;
-            text-align: center;
+        .wrapper{
+            flex-direction: column;
 
             @include desktop(){
-                margin: 1em 0em 0em 0em;
-                width: 60%;
+                // align-items: flex-start;
+                // text-align: left;
+                width: 42%;
+
+            }
+    
+
+            h1{
+                color:$dark-gray;
+                
+            }
+            
+            span{
+                color:$dark-green;
+                font-family:$secondary;
+                // text-shadow: none;
+    
+                @include large-desktop(){
+                    font-size: 1em;
+                }
+                
+            }
+            
+            p{
+                margin: 15px 0px;
+                text-align: center;
+
+            }
+    
+            a{
+                margin: 1em 0em 3em 0em;
+                text-align: center;
+                max-width: 450px;
+    
+                @include desktop(){
+                    margin: 1em 0em 0em 0em;
+                    // width: 60%;
+                }
+    
+                // @include med-desktop(){
+                //     width:80%;
+                // }
+    
+                // @include large-desktop(){
+                //     width: 60%;
+                // }
+    
+                // @include largest(){
+                //     width: 54%;
+                // }
             }
 
-            @include med-desktop(){
-                width:80%;
-            }
-
-            @include large-desktop(){
-                width: 60%;
-            }
-
-            @include largest(){
-                width: 54%;
-            }
         }
+        
     }
 }
 
